[lworld] C2 compilation fails with assert(t->meet(t0) == t) failed: Not monotonic

XMLWordPrintable

      # Internal Error (/oracle/valhalla2/open/src/hotspot/share/opto/phaseX.cpp:1748), pid=26924, tid=26937
      # assert(t->meet(t0) == t) failed: Not monotonic

      Current CompileTask:
      C2: 647 148 java.util.ImmutableCollections$SetN::<init> (90 bytes)

      Stack: [0x00007f57547ca000,0x00007f57548cb000], sp=0x00007f57548c6340, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1564f54] PhaseCCP::analyze()+0x2b4
      V [libjvm.so+0x9e3c3e] Compile::Optimize()+0x51e
      V [libjvm.so+0x9e56a9] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xf49
      V [libjvm.so+0x813ca0] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x110
      V [libjvm.so+0x9f1c5b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2db
      V [libjvm.so+0x9f2c58] CompileBroker::compiler_thread_loop()+0x4f8
      V [libjvm.so+0x17cd2a6] JavaThread::thread_main_inner()+0x206
      V [libjvm.so+0x17d2726] Thread::call_run()+0xf6
      V [libjvm.so+0x14bfaae] thread_native_entry(Thread*)+0x10e

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: