8233464: [lworld] C2 compilation fails with assert(t->meet(t0) == t) failed: Not monotonic